Fix navigation issue on mobile

--- a/assets/styles/components/_nav.scss
+++ b/assets/styles/components/_nav.scss
@@ -139,6 +139,8 @@
 		z-index: 2;
 		padding: 0 1rem;
 		cursor: pointer;
+		transform: rotate(0deg);
+		transition: transform $timing $easing;
 
 		span {
 			width: 1.25rem;
@@ -203,6 +205,13 @@
 		position: fixed;
 		top: 0;
 		left: 0;
+		background-color: rgba($color-black, 0.9);
+		transform: translateX(-100%);
+		transition: transform $timing $easing;
+
+		&::before {
+			content: none;
+		}
 
 		ul {
 			height: 100%;
@@ -216,6 +225,8 @@
 				width: 100%;
 				@include flex-row(nowrap, center, center);
 				flex: 1;
+				opacity: 1;
+				visibility: visible;
 				position: static;
 				top: auto;
 				left: auto;
@@ -232,6 +243,7 @@
 					width: 100%;
 					height: 100%;
 					padding: 0;
+					background-color: transparent;
 					border-radius: 0;
 					animation: none !important;
 
@@ -241,7 +253,22 @@
 						padding: 0.5rem 1rem;
 						transform: none;
 					}
+
+					&:active {
+						color: $color-black;
+						background-color: $color-white;
+					}
 				}
+			}
+		}
+
+		&__toggler:checked {
+			~ .c-nav {
+				transform: translateX(0%);
+			}
+
+			~ .c-nav__toggle {
+				transform: rotate(90deg) translate(-6px, -10px);
 			}
 		}
 	}
